syntax = "proto3";


option go_package = "pickrewardapi/internal/application/card/proto";
// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";

package card.v1;

service CardV1 {
  rpc GetCardsByBankID (CardsByBankIDReq) returns (CardsReply) {}
  rpc GetLatestCards (EmptyReq) returns (CardsReply) {}
  rpc GetCardByID (CardIDReq) returns (CardReply) {}
  rpc SearchCard(SearchCardReq) returns (CardsReply){}
}


message Reply {
  int32 status = 1;
  Error error = 2;
}


message Error {
  int32 errorCode = 1;
  string errorMessage = 2;
}

message CardsByBankIDReq{
  string id = 1;
}

message CardIDReq{
  string id = 1;
}


message CardsReply{
  message Card {
    string id = 1;
    string name = 2;
    repeated string descriptions = 3;
    string linkURL = 4;
    string bankID = 5;
    string imageName = 6;
    int32 order = 7;
    int32 cardStatus = 8;
    int64 createDate = 9;
    int64 updateDate = 10;
  }
  
  Reply reply = 1;
  repeated Card cards = 2;
}


message CardReply{
  message Card {
    string id = 1;
    string name = 2;
    repeated string descriptions = 3;
    string linkURL = 4;
    string bankID = 5;
    string imageName = 6;
    int32 order = 7;
    int32 cardStatus = 8;
    int64 createDate = 9;
    int64 updateDate = 10;
  }
  
  Reply reply = 1;
  Card card = 2;
}





message SearchCardReq{
  string keyword = 1;
}






message EmptyReq{}



